--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Main.Main
+GameDefaultMap=/Game/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/snakegame.snakegame_C
 EditorStartupMap=/Game/Main.Main
 
