--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -126,14 +126,15 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Main
-MRUItem1=/Game/Untitled
-MRUItem2=/Game/NewMap1
-MRUItem3=/Game/NewMap
-MRUItem4=/Game/NewMap2
+MRUItem0=/Game/MainMenu
+MRUItem1=/Game/Main
+MRUItem2=/Game/Untitled
+MRUItem3=/Game/NewMap1
+MRUItem4=/Game/NewMap
+MRUItem5=/Game/NewMap2
 
 [EditorStartup]
-LastLevel=/Game/Main
+LastLevel=/Game/MainMenu
 
 [ModuleFileTracking]
 MyProject2.TimeStamp=2024.07.12-20.05.15
@@ -1022,7 +1023,7 @@ SequencerWidgets.TimeStamp=2024.04.11-14.05.45
 SequencerWidgets.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1485,7 +1486,7 @@ TextBlock.Accessibility=True
 TextBlock.Performance=True
 TextBlock.Wrapping=True
 TextBlock.Behavior=True
-TextBlock.Render Transform=True
+TextBlock.Render Transform=False
 TextBlock.Clipping=True
 TextBlock.Navigation=True
 TextBlock.Localization=True
@@ -1561,28 +1562,60 @@ Blocksnake_C.Collision=True
 Blocksnake_C.Actor=True
 Blocksnake_C.Input=True
 Blocksnake_C.TransformCommon=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+PanelWidget.Layout=True
+PanelWidget.Behavior=True
+PanelWidget.Accessibility=True
+PanelWidget.Render Transform=True
+PanelWidget.Performance=True
+PanelWidget.Clipping=True
+PanelWidget.Navigation=True
+PanelWidget.Localization=True
+MainMenu_C.Tick=True
+MainMenu_C.Replication=True
+MainMenu_C.Actor=True
+MainMenu_C.Input=True
+Widget.Behavior=True
+Widget.Accessibility=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+Widget.Localization=True
+Widget.Layout=True
+K2Node_CustomEvent.GraphNodeDetail=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SnakeBP
-MRUItem1=/Game/PlayerPawnBP
-MRUItem2=/Game/StaticMesh_Sphere2
-MRUItem3=/Game/BP_foodSpeed
+MRUItem0=/Game/MainMenu
+MRUItem1=/Game/Main
+MRUItem2=/Game/Mainmenu1
+MRUItem3=/Game/MENU
 MRUItem4=/Game/Myfood
-MRUItem5=/Game/SnakeElemBP
-MRUItem6=/Game/Blocksnake
-MRUItem7=/Game/snakegame
-MRUItem8=/Game/NewWidgetBlueprint1
-MRUItem9=/Game/NewWidgetBlueprint
-MRUItem10=/Game/BP_Lamp
-MRUItem11=/Game/Meshes/StaticMesh_Sphere2
-MRUItem12=/Game/fdffdsffdsdfs
-MRUItem13=/Game/green
-MRUItem14=/Game/dasadadas
-MRUItem15=/Game/Untitled
-MRUItem16=/Game/NewMap1
-MRUItem17=/Game/NewMap
-MRUItem18=/Game/SnakeElement
-MRUItem19=/Game/SnakeBaseBP
+MRUItem5=/Game/BP_foodSpeed
+MRUItem6=/Game/BP_Lamp
+MRUItem7=/Game/SnakeBP
+MRUItem8=/Game/PlayerPawnBP
+MRUItem9=/Game/StaticMesh_Sphere2
+MRUItem10=/Game/SnakeElemBP
+MRUItem11=/Game/Blocksnake
+MRUItem12=/Game/snakegame
+MRUItem13=/Game/NewWidgetBlueprint1
+MRUItem14=/Game/NewWidgetBlueprint
+MRUItem15=/Game/Meshes/StaticMesh_Sphere2
+MRUItem16=/Game/fdffdsffdsdfs
+MRUItem17=/Game/green
+MRUItem18=/Game/dasadadas
+MRUItem19=/Game/Untitled
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1658,7 +1691,7 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
-ScreenPosition=X=315.000 Y=155.000
+ScreenPosition=X=294.000 Y=345.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1703,6 +1736,8 @@ LastLogListing=CompilerResultsLog
 /Game/BP_foodSpeed.BP_foodSpeed=1
 /Game/NewWidgetBlueprint.NewWidgetBlueprint=1
 /Game/Main.Main:PersistentLevel.Main=1
+/Game/BP_Lamp.BP_Lamp=1
+/Game/Mainmenu1.Mainmenu1=1
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bShowGrid=False
@@ -1878,6 +1913,7 @@ InstalledPlugins=XRVisualization
 [DetailCategoriesAdvanced]
 Blueprint.ClassOptions=True
 StaticMeshActor.StaticMesh=False
+TextBlock.Behavior=True
 
 [DetailPropertyExpansion]
 StaticMeshComponent=
@@ -1885,18 +1921,21 @@ MeshComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
-Object="\"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+Object=
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 Border="\"Object.Appearance.Background\" "
-ContentWidget="\"Object.Appearance.Background\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
 PanelWidget=
-Widget=
-Visual=
+Widget="\"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.Font\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1969,4 +2008,5 @@ Special Effects=False
 Synth=False
 User Created=False
 Advanced=False
+Common=False
 
