--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -137,7 +137,7 @@ MRUItem5=/Game/NewMap2
 LastLevel=/Game/Main
 
 [ModuleFileTracking]
-MyProject2.TimeStamp=2024.08.01-19.06.42
+MyProject2.TimeStamp=2024.08.01-22.20.56
 MyProject2.LastCompileMethod=External
 PakFile.TimeStamp=2024.04.11-14.05.42
 PakFile.LastCompileMethod=Unknown
@@ -1596,12 +1596,12 @@ Widget.Layout=True
 K2Node_CustomEvent.GraphNodeDetail=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SnakeElemBP
-MRUItem1=/Game/Meshes/StaticMesh
-MRUItem2=/Game/BP_foodSpeed
-MRUItem3=/Game/Myfood
+MRUItem0=/Game/Main
+MRUItem1=/Game/Myfood
+MRUItem2=/Game/SnakeElemBP
+MRUItem3=/Game/BP_foodSpeed
 MRUItem4=/Game/MainMenu
-MRUItem5=/Game/Main
+MRUItem5=/Game/Meshes/StaticMesh
 MRUItem6=/Game/Mainmenu1
 MRUItem7=/Game/MENU
 MRUItem8=/Game/BP_Lamp
@@ -1832,9 +1832,10 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,
 StaticMeshComponent=
 SceneComponent=StaticMeshComponent.Collision.Collision,
-BP_foodSpeed_C=StaticMeshComponent.Collision.Collision,
+BP_foodSpeed_C=
 Blocksnake_C=StaticMeshComponent.Collision.Collision,
 Myfood_C=StaticMeshComponent.Collision.Collision,
+PropertyWrapper=StaticMeshComponent.Collision.Collision,
 
 [MaterialEditor]
 PrimType=1
